# Prism

./: .env.example  .gitignore  AGGREGATOR_VKEY.txt  Cargo.toml  DEV2_HANDOFF.md  DEV3_HANDOFF.md  ELF_SHAS.txt  FEEDBACK.md  INTERFACES_FOR_DEV3.md  LICENSE  Makefile  README.md  rust-toolchain.toml  walkthrough.md
agent-brains/: requirements.txt  run_swarm.py
agent-brains/alpha/: brain.py
agent-brains/beta/: brain.py
agent-brains/common/: __init__.py  broadcaster.py  chain_client.py  constants.py  market_reader.py
agent-brains/delta/: __init__.py
agent-brains/tests/: __init__.py  test_chain_client.py  test_commitment.py  test_market_reader.py  test_swarm.py
agents-brain/: requirements.txt  run_swarm.py
agents-brain/alpha/: __init__.py
agents-brain/beta/: __init__.py
agents-brain/common/: broadcaster.py  commitment.py  constants.py  market_reader.py  schemas.py  wallets.py
agents-brain/delta/: brain.py
agents-brain/epsilon/: __init__.py  brain.py
agents-brain/gamma/: __init__.py  brain.py
agents-brain/tests/: test_all_brains.py  test_broadcaster.py  test_commitment.py  test_market_reader.py
contracts/: .gitmodules  foundry.toml
contracts/script/: DeployPrismHook.s.sol  DeployVerifier.s.sol
contracts/src/: MockAave.sol  MockSP1Verifier.sol  PrismHook.sol
contracts/test/: AbiCompatibility.t.sol  PrismHook.t.sol
crates/prism-orchestrator/: Cargo.toml
crates/prism-orchestrator/examples/: extract_aggregator_vkey.rs  extract_sub_vkeys.rs
crates/prism-orchestrator/src/: aave_client.rs  main.rs  mock_intents.rs  proving.rs  settlement.rs  uniswap_client.rs
crates/prism-solver/: Cargo.toml
crates/prism-solver/src/: lib.rs
crates/prism-types/: Cargo.toml
crates/prism-types/examples/: print_test_vector.rs
crates/prism-types/src/: lib.rs
frontend/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/prism/: AgentCard.tsx  AgentGlyph.tsx  AmbientBackground.tsx  CooperativeMEV.tsx  DemoToggle.tsx  EpochDetail.tsx  EpochTimeline.tsx  Odometer.tsx  PlanBPill.tsx  ProofPipeline.tsx  SettlementPipeline.tsx  ShapleyBreakdown.tsx  SignalLedger.tsx  SiteShell.tsx  SwarmAbstraction.tsx  TelemetryMatrix.tsx
frontend/src/lib/: agents.ts  derivedState.ts  wsClient.ts
frontend/src/pages/: EpochLive.tsx  Landing.tsx  NotFound.tsx  Overview.tsx  Settlement.tsx
frontend/src/store/: demoMode.tsx
frontend/src/test/: agents.test.ts  derivedState.test.ts  liveMode.test.tsx
sp1-programs/aggregator/: Cargo.toml
sp1-programs/aggregator/elf/: aggregator  riscv32im-succinct-zkvm-elf
sp1-programs/aggregator/src/: main.rs
sp1-programs/execution-proof/: Cargo.toml
sp1-programs/execution-proof/elf/: riscv32im-succinct-zkvm-elf
sp1-programs/execution-proof/src/: main.rs
sp1-programs/shapley-proof/: Cargo.toml
sp1-programs/shapley-proof/elf/: riscv32im-succinct-zkvm-elf
sp1-programs/shapley-proof/src/: main.rs
sp1-programs/solver-proof/: Cargo.toml
sp1-programs/solver-proof/elf/: riscv32im-succinct-zkvm-elf
sp1-programs/solver-proof/src/: main.rs
