[package]
name = "prism-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared data types for the PRISM coordination layer."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tiny-keccak = { workspace = true }
hex = { workspace = true }

[[example]]
name = "print_test_vector"
path = "examples/print_test_vector.rs"
