[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

# NOTE: this is the CRITICAL program. After compiling with `cargo prove build`
# inside this directory, extract the verification key via
# `sp1_sdk::ProverClient::from_env().setup(elf).1` and pass the resulting
# hash bytes to Dev 2 as `AGGREGATOR_VKEY` for PrismCoordinator.sol.
#
# Recursive verification requires the real SP1 SDK version to match exactly;
# double-check `sp1-zkvm = "3.0.0"` matches whatever sp1up installs.

[dependencies]
sp1-zkvm = { version = "3.0.0", features = ["verify"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
sha2 = { version = "0.10", default-features = false }

[[bin]]
name = "aggregator"
path = "src/main.rs"

[profile.release]
opt-level = 3
