[package]
name = "shapley-proof"
version = "0.1.0"
edition = "2021"

# NOTE: compiled via `cargo prove build` to the RISC-V zkVM target; needs sp1up.

[dependencies]
sp1-zkvm = "3.0.0"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
sha2 = { version = "0.10", default-features = false }

[[bin]]
name = "shapley-proof"
path = "src/main.rs"

[profile.release]
opt-level = 3
